--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="single-country" id="single-country"></div>
       <div class="all-countries" id="all-countries"></div>
     </main>
+    <script src="./index.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
