--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <option value="Asia">Asia</option>
           <option value="Europe">Europe</option>
           <option value="Oceania">Oceania</option>
+          <option value="Americas">Americas</option>
         </select>
       </div>
       <div class="single-country" id="single-country"></div>
